@@ -1,3 +1,3 @@
 DIST code2color-0.2 200711 SHA256 2365c9009b1cc3c30430b88775ec402164df105fd12364871d05dcaed20be954 SHA512 c0ab9f411d5a106c81334343e3c4a63b67d27b95e2d128145e3ac1ee46cd6c228c61796cf96e51826e69b3e465e7bdaa81b1a48cad934c23b310f2ea2ebd8e75 WHIRLPOOL d0207e84a5849c554b1dfc5882ab46d8afc411c7d26e912235ec05565880e6ed0db8449133502234a01ae8f59feae211486b6a523e37859d8404f72fff9b8f93
 DIST less-459.tar.gz 311303 SHA256 dde57d16489a433605ede1ef35775a1d3beda1d621cd4b2b321874f9deaf7f11 SHA512 37ed81365db193b832cb09e5689e3355f66308ad9aa75d73713011a61893bd9249a2c73e685428ddc22304672b6f38554d4590b4bbb3cebd6a04fcfd7a42447d WHIRLPOOL ab249911378987cb401d6644b1000174f0acc4457dfe5955db71385e3abe6b2696c4c321e5de9722376fb98513023efbef9cd015578998f29873e8b85ae7a938
-DIST less-select-2.2.tar.gz 25047 SHA256 b9a35194fd6c188a9aedc6835b233f0e8078df0e309e39067c893b8b1f73141f SHA512 5ce36fa4e404ae626f9c96ffcf58b9188e0f12c6db0321d3f0ed8fe47593951d072e1da53b874e80fc39041ae8aa85d06d646215d7ad63c611cb096ff5ca9136 WHIRLPOOL ec5341dbb4292f3e776e32ba996ef2efe2aa89438d4f0907efecdcf234d27b2b0e149d43ebd6dee089365c20f2a0796497e5cceebf3f25b846c14e8f0d9e762e
+DIST less-select-2.3.tar.gz 25317 SHA256 3557700292c4d3211d65816d472c190ee514d2a82f1b68707423c73cacf4c8a4 SHA512 228f1a3264af1bf0f2ea6fe1fc425645e153f775ae7ae5c419a0b72a097140879dceac405e13786a8481b7032704816fcc9fe0fcd5a9ab15c3e1b23a0aa10f7a WHIRLPOOL c50984a606aaa961198410e199489cc68b919e63f1602cde5094b3b9e83f1291ed01f4f04131511ca9a326d50d0325a90da44af0683fad5c8ba6b3f98c578ea2
